# tabularbench

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATE/: attack_submission.yml  config.yml  dataset_submission.yml  model_submission.yml
.github/workflows/: gh-pages.yml  jekyll-gh-pages.yml
doc/: requirements.txt
doc/source/: attacks.md  conf.py  contribute.md  index.rst  models.md
docs/: index.md  lcld.md  leaderboard.html  naming.md  url.md
docs/source/: about.md  attacks.md  attacks_ref.rst  conf.py  constraints.md  contribute.md  datasets.md  defenses.md  index.rst  installation.md  models.md  quickstart.md
tabularbench/attacks/: __init__.py  objective_calculator.py  utils.py
tabularbench/attacks/caa/: caa.py
tabularbench/attacks/capgd/: capgd.py
tabularbench/attacks/cpgd/: cpgd.py
tabularbench/attacks/moeva/: adversarial_problem.py  history_callback.py  moeva.py  operators.py
tabularbench/benchmark/: benchmark.py  model_utils.py  subset_utils.py
tabularbench/constraints/: backend.py  constraints.py  constraints_backend_executor.py  constraints_checker.py  constraints_executor.py  constraints_fixer.py  constraints_parser.py  numpy_backend.py  pytorch_backend.py  relation_constraint.py  utils.py
tabularbench/dataloaders/: __init__.py  aliases.py  dataloader.py  default.py  fast_dataloader.py
tabularbench/dataloaders/adversarial/: madry.py
tabularbench/dataloaders/generative/: ctgan.py  gan_file.py  goggle.py  tablegan.py  tvae.py  wgan.py
tabularbench/dataloaders/mix/: cutmix.py
tabularbench/datasets/: aliases.py  dataset.py  dataset_factory.py  processing.py
tabularbench/datasets/samples/: __init__.py  airlines.py  ctu_13_neris.py  electricity.py  lcld.py  malware.py  url.py  wids.py
tabularbench/logging/: __init__.py  json_formatter.py  queue_listner_handler.py  setup.py
tabularbench/metrics/: compute.py  metric.py  metric_factory.py  metrics.py
tabularbench/models/: aliases.py  model.py  model_factory.py  tab_scaler.py  torch_models.py
tabularbench/utils/: __init__.py  datatypes.py  format.py  huggingface.py  io.py  load_do_save.py  training.py  typing.py
tasks/: docker_build.sh  docker_run_benchmark.sh  docker_run_website.sh  docker_train_model.sh  run_benchmark.py  train_model.py
tests/constraints/: test_constraints_fixer.py  test_grad.py
tests/datasets/: test_datasets_constraints.py  test_datasets_load.py
website/: _config.yaml  ctu.md  index.md  leaderboard.md  malware.md  moeva.md  style.css  url.md  wids.md
website/moeva/: ctu.md  lcld.md  url.md  wids.md
website/tables/: ctu.md  ctu_new.md  lcld.md  lcld_new.md  malware.md  malware_new.md  update.py  url.md  url_new.md  wids.md  wids_new.md
(+24 files in other folders)
