[tool.poetry]
name = "tabularbench"
version = "0.1.0"
description = "TabularBench: Adversarial robustness benchmark for tabular data"
authors = ["Thibault Simonetto <thibault.simonetto@uni.lu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


