[tool.poetry]
name = "tabularbench"
version = "0.1.0"
description = "TabularBench: Adversarial robustness benchmark for tabular data"
authors = ["Thibault Simonetto <thibault.simonetto@uni.lu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.11"
numpy = "<1.24"
pandas = "^1.4.1"
torch ="1.12.1"
requests = "^2.25.1"
scikit-learn = "^1.0.2"
tables = "3.7.0"
optuna = "3.1.1"
h5py = "^3.11.0"
torchattacks="3.4.0"


# Potentially unsupported
einops = "^0.6.1"
lifelines = "^0.27.8"
pytorch-tabnet = "^4.1.0"
pymoo = "0.5.0"
pyarrow = "^16.1.0"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^5.0.0"
flake8 = "^7.0.0"
mypy = "^1.10.0"
isort = "^5.13.2"
pre-commit = "^3.5"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
